Report improvements
1) Reports navigation button is hidden if user does not have permission
to view reports

2) Ability to clear drop down inputs on the parameter panel in the
frontend

3) Add description to top of the parameter panel: "You can provide
additional filters below. If no filters are set, all records will be
displayed."

4) Reports should require a minimum permission of READ instead of CLIENT

5) The parameter drop downs should fetch data (e.g. instance groups)
from a dedicated report-specific endpoints as the user might not have
permissions on the "real" endpoints

6) Check permissions on the report.

7) Check sonarcloud findings (NPEs)

8) Product selection:
If no instance group is selected, the list of products shall be taken
from all software repositories
If an instance group is selected, the list of product shall be taken
from the instance group

9) Product version
The product version shall be a select field that is open for free text
input.
The list of product versions is either taken from the software
repositories or from the instance group (see product selection).

10) The name of the report shown shall be shown in the title of the
result dialog.
The date and time when the result is generated shall be shown just below
the title.

11) grouping

12) csv export

13) Table headings. Use upper case first letters as in the instances
dialog

14) Columns (in this order)

Columns in the table
Instance Group Description
Instance (showing the Instance Name)
Product (showing the Product Name)
Latest Product Version
Active Product Version
Purpose (no icon)
Last Communication

Information in the sidebar (grid of label / value pairs)
All columns from the table
Instance Group (showing the Instance Group Name)
System
Product ID
Instance UUID
Managed Server

15) Rename the column to "Report Type" and put the column last

16) Update productsInUse report description to: "Shows where products
are used, in which version, and for what purpose."

17) Make rows per table